--- a/restfulapi-typeorm-uroanalisis/src/html/login.html
+++ b/restfulapi-typeorm-uroanalisis/src/html/login.html
@@ -20,6 +20,9 @@
     <div class="container" style="margin-left: 28rem;margin-top: 8rem;width: 30rem;">
       <form id=form-login class="border" style="padding-top: 20px;padding-left:20px;background-color: rgb(255, 255, 255)">
         <p style="margin-left: 9rem;"><strong>Acceso a sistema</strong></p>
+        <div id="contenedor-respuesta">
+
+        </div>
         <input class="caja-texto" type="text" id="id" style="margin-top: 10px;width: 92%" placeholder="ID"><br>
         <input class="caja-texto" type="password" id="password" style="margin-top: 10px;width: 92%;margin-top: 10px" placeholder="Password"><br>
         <div class="row">
