--- a/restfulapi-typeorm-uroanalisis/src/html/recepcionista.html
+++ b/restfulapi-typeorm-uroanalisis/src/html/recepcionista.html
@@ -19,8 +19,8 @@
 <h1 style="margin-left: 28rem;margin-top: 2rem;">Recepción de muestras-HEU</h1>
     
     <div>
-        <input style="margin-top: 3rem;margin-left: 10rem"" type="search" name=domains value="ID paciente" /><br>          
-        <input style="margin-left: 10rem;" type=submit  id="x" name=btnG VALUE="Buscar paciente" />
+        <input style="margin-top: 3rem;margin-left: 10rem" type="search" id="id" name=domains placeholder="ID paciente" /><br>          
+        <input style="margin-left: 10rem;" type=submit  id="btn-buscar" name=btnG VALUE="Buscar paciente" />
     </div>
 
     <div class="container" style="margin-left: 28rem;margin-top: 8rem;width: 30rem;">
@@ -42,6 +42,6 @@
     </div>
 
     <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/login-controller.js"></script>
+    <script src="js/recepcionista-controller.js"></script>
 </body>
 </html>
