HTMLs enfermería y recepcionista
SUbiendo más HTMLs

--- a/restfulapi-typeorm-uroanalisis/src/html/recepcionista.html
+++ b/restfulapi-typeorm-uroanalisis/src/html/recepcionista.html
@@ -23,20 +23,20 @@
         <button type="button" id="btn-aceptar" style="margin-top: 10px;background-color: #3EA1C1;margin-bottom: 20px;margin-left: 210px"><a><span style="color:white">Buscar paciente</span></a></button>
     </div>
 
-        <div class="table" style="margin-left: 28rem;margin-top: 1rem;width: 50rem;">
+        <div class="table" style="margin-left: 28rem;margin-top: 1rem;width: 50rem;"></div>
             <table class="egt">
                 <tr>
-                <th scope="row">Paciente</th>
-                <th>Fecha de solicitud</th>
-                <th>Médico</th>
-                <th>Generar reporte</th>
+                    <th scope="row">Paciente</th>
+                    <th>Fecha de solicitud</th>
+                    <th>Médico</th>
+                    <th>Generar reporte</th>
                 </tr>
                 <tr>
-                <th>Nombre Paciente 1</th>
-                <td>28/05/2020</td>
-                <td>Médico3</td>
-                <td><a href=http://localhost/solicitar>Solicitar examen</a></td>
-                </tr>
+                    <th>Nombre Paciente 1</th>
+                    <td>28/05/2020</td>
+                    <td>Médico3</td>
+                    <td><a href=http://localhost/solicitar>Solicitar examen</a></td>
+                    </tr>
                 <tr>
                     <th>Nombre Paciente 2</th>
                     <td>28/05/2020</td>
