--- a/restfulapi-typeorm-uroanalisis/src/html/enfermera.html
+++ b/restfulapi-typeorm-uroanalisis/src/html/enfermera.html
@@ -6,58 +6,39 @@
     <title>Enfermería</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css" />
-    <!--
 
-    <link rel="stylesheet" type="text/css" media="screen" href="css/custom.css" />
-    <link rel="shortcut icon" href="img/favicon.ico">
-
-    -->
 
 </head>
 <body style="background-color:#F9F9F8">
-    <div>
-            <h1 style="margin-left: 38rem;margin-top: 2rem;">Enfermería</h1>
-            <h4 style="margin-left: 10rem;margin-top: 2rem;">Enfermera(o):</h4> <input style="margin-left: 10rem;" type="NombreEnfermera">
+    <p style="margin-left: 1rem;margin-top: 1rem;">EFRO Sergio</p>
+    <div style="margin-top: 8rem;">
         <div>
             <div class="container">
                 <div class="row">
-                    <h4 style="margin-left: 2rem;margin-top: 2rem;"">Buscar paciente:</h4>
-                    <input style="margin-top: 1rem;margin-left: 2rem"" type="search" name=domains placeholder="ID paciente"/><br>          
-                    <button type="button" id="btn-aceptar" style="margin-top: 10px;background-color: #3EA1C1;margin-bottom: 20px;margin-left: 210px"><a><span style="color:white">Registrar paciente</span></a></button>
+                    <h4 style="margin-left: 2rem;margin-top: 2rem;">Buscar paciente:</h4>
+                    <input id="id" style="margin-top: 1rem;margin-left: 2rem" type="search" name=domains placeholder="ID paciente"/><br>          
+                    <button type="button" id="btn-registrar" style="margin-top: 10px;background-color: #3EA1C1;margin-bottom: 20px;margin-left: 210px"><a><span style="color:white">Registrar paciente</span></a></button>
                 </div>
             </div>
-                <button type="button" id="btn-aceptar" style="margin-top: 10px;background-color: #3EA1C1;margin-bottom: 20px;margin-left: 350px"><a><span style="color:white">Buscar paciente</span></a></button>
+                <button type="button" id="btn-buscar" style="margin-top: 10px;background-color: #3EA1C1;margin-bottom: 20px;margin-left: 350px"><a><span style="color:white">Buscar paciente</span></a></button>
         </div>
         <div class="table" style="margin-left: 20rem;margin-top: 1rem;">
-            <table class="egt">
+            <table class="egt" id="tabla">
                 <tr>
-                    <th scope="row">Paciente ID</th>
-                    <th>Primer nombre</th>
-                    <th>Segundo nombre</th>
-                    <th>Primer apellido</th>
-                    <th>Edad</th>
-                    <th>Género</th>
-                </tr>
-                <tr>
-                    <th scope="row">Paciente ID</th>
-                    <th>Primer nombre</th>
-                    <th>Segundo nombre</th>
-                    <th>Primer apellido</th>
-                    <th>Edad</th>
-                    <th>Género</th>
-                <tr>
-                    <th scope="row">Paciente ID</th>
-                    <th>Primer nombre</th>
-                    <th>Segundo nombre</th>
-                    <th>Primer apellido</th>
-                    <th>Edad</th>
-                    <th>Género</th>
+                    <th scope="row">PacienteID</th>
+                    <th>PrimerNombre</th>
+                    <th>SegundoNombre</th>
+                    <th>PrimerApellido</th>
+                    <th>Temperatura</th>
+                    <th>Presion</th>
+                    <th>Peso</th>
+                    <th>Altura</th>
                 </tr>
             </table>
         </div>
     </div>  
 
-    <div class="container" style="margin-top: 2rem;margin-left: 1rem">
+    <div class="container" style="margin-top: 5rem;margin-left: 1rem">
         <div style="margin-left: 3rem;">
             <img src="img/img.jpg">
         </div>
@@ -65,6 +46,6 @@
     </div>
 
     <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/login-controller.js"></script>
+    <script src="js/enfermera-controller.js"></script>
 </body>
 </html>
