--- a/restfulapi-typeorm-uroanalisis/src/html/preclinica.html
+++ b/restfulapi-typeorm-uroanalisis/src/html/preclinica.html
@@ -51,6 +51,6 @@
     </div>
     
     <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/login-controller.js"></script>
+    <script src="js/preclinica-controller.js"></script>
 </body>
 </html>
