--- a/restfulapi-typeorm-uroanalisis/src/html/consulta.html
+++ b/restfulapi-typeorm-uroanalisis/src/html/consulta.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Login</title>
+    <title>Consulta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css" />
     
 </head>
 <body style="background-color:#F9F9F8">
-   
-<h1 style="margin-left: 28rem;margin-top: 2rem;">Microbiologia Uroanalisis</h1>
-    <div class="container" style="margin-left: 28rem;margin-top: 8rem;width: 30rem;">
-      <form id=form-login class="border" style="padding-top: 20px;padding-left:20px;background-color: rgb(255, 255, 255)">
-        <p style="margin-left: 9rem;"><strong>Acceso a sistema</strong></p>
-        <div id="contenedor-respuesta">
-
-        </div>
-        <input class="caja-texto" type="text" id="id" style="margin-top: 10px;width: 92%" placeholder="ID"><br>
-        <input class="caja-texto" type="password" id="password" style="margin-top: 10px;width: 92%;margin-top: 10px" placeholder="Password"><br>
-        <div class="row">
-          <button type="button" id="btn-guarar" style="margin-top: 10px;background-color: #3EA1C1;margin-bottom: 20px;margin-left: 15px"><a><span style="color:white">Log In</span></a></button>
-        </div>
-      </form>
+  <p style="margin-left: 2rem;margin-top: 2rem;">DR. Eduardo</p>
+<div style="margin-top: 5rem;margin-left: 25rem;">
+  <button type="button" id="solicitud" style="margin-left: 7rem;" onclick="alert('Se a solicitado un examen de orina');">Solicitar examen de orina</button>
+  <div class="container" style="margin-top:3rem;">
+    <div class="row">
+      <p>Sintomas</p>
+      <input type="text" id="sintomas" style="margin-left: 3rem;width: 25rem;"></input>
     </div>
-    
-    <div class="container" style="margin-top: 7rem;margin-left: 1rem">
+    <div class="row" style="margin-top: 3rem;">
+       <p>Recetas</p>
+      <input type="text" id="receta" style="margin-left: 4rem;width: 25rem;"></input>
+    </div>
+  </div>
+  <button type="button" id="guardar" style="margin-top: 3rem;margin-left: 30rem;">Guardar</button>
+</div>   
+
+
+    <div class="container" style="margin-top: 6rem;margin-left: 1rem">
         <div style="margin-left: 3rem;">
             <img src="img/img.jpg">
         </div>
